force-app/main/default/objects/UserLoginAudit__c/UserLoginAudit__c.object-meta.xml
<CustomObject>
    <description>Object used to track the login from the support users into the Cash Nexus community users.</description>
    <label>User Login Audit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Login Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Logins Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>