force-app/main/default/objects/UserLoginAudit__c/fields/loggedAsUser__c.field-meta.xml
<CustomField>
    <fullName>loggedAsUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to the community user whose information is being accessed by Support.</description>
    <label>Logged As</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Logins_Audit1</relationshipName>
    <type>Lookup</type>
</CustomField>