force-app/main/default/objects/UserLoginAudit__c/fields/loggedInUser__c.field-meta.xml
<CustomField>
    <fullName>loggedInUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who logged in as another user, making use of the Login As functionality.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Logins_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>