force-app/main/default/objects/UserLoginAudit__c/fields/loginDate__c.field-meta.xml
<CustomField>
    <fullName>loginDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Login Date</label>
    <type>DateTime</type>
</CustomField>